--- a/Resources/views/Security/login.html.twig
+++ b/Resources/views/Security/login.html.twig
@@ -1,7 +1,7 @@
 {% extends "@NCMFUser/layout.html.twig" %}
 {% trans_default_domain 'FOSUserBundle' %}
-{% block body %}
 
+{% block body %}
     <div class="text-center">
         <form action="{{ path("fos_user_security_check") }}" method="post" class="form-signin">
             {% if csrf_token %}
@@ -14,18 +14,18 @@
             {% endif %}
 
             <label for="username" class="sr-only">{{ 'security.login.username'|trans }}</label>
-            <input class="form-control" id="username" name="_username"
+            <input class="form-control form-control--first" id="username" name="_username"
                    placeholder="{{ 'security.login.username'|trans }}"
                    value="{{ last_username }}"
                    required autofocus>
 
             <label for="inputPassword" class="sr-only">{{ 'security.login.password'|trans }}</label>
-            <input class="form-control" placeholder="{{ 'security.login.password'|trans }}"
+            <input class="form-control form-control--password" placeholder="{{ 'security.login.password'|trans }}"
                    type="password" id="password"
                    name="_password"
                    required>
 
-            <div class="checkbox mb-3">
+            <div class="checkbox mb-3 mt-2">
                 <label>
                     <input type="checkbox" id="remember_me" name="_remember_me"
                            value="on"/>
@@ -34,67 +34,21 @@
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit" id="_submit"
                     name="_submit">{{ 'security.login.submit'|trans }}</button>
+            <div class="row mt-3">
+                <div class="col-md-6 text-left">
+                    <small><a href="{{ path('fos_user_resetting_request') }}">Забыли пароль?</a></small>
+                </div>
+                <div class="col-md-6 text-right">
+                    <small><a href="{{ path('fos_user_registration_register') }}">Регистрация</a></small>
+                </div>
+            </div>
             <p class="mt-5 mb-3 text-muted">&copy; {{ 'now'|date('Y') }}</p>
         </form>
+
     </div>
 {% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
-    <style type="text/css">
-        html,
-        body {
-            height: 100%;
-        }
-
-        body {
-            display: -ms-flexbox;
-            display: -webkit-box;
-            display: flex;
-            -ms-flex-align: center;
-            -ms-flex-pack: center;
-            -webkit-box-align: center;
-            align-items: center;
-            -webkit-box-pack: center;
-            justify-content: center;
-            padding-top: 40px;
-            padding-bottom: 40px;
-            background-color: #f5f5f5;
-        }
-
-        .form-signin {
-            width: 100%;
-            max-width: 330px;
-            padding: 15px;
-            margin: 0 auto;
-        }
-
-        .form-signin .checkbox {
-            font-weight: 400;
-        }
-
-        .form-signin .form-control {
-            position: relative;
-            box-sizing: border-box;
-            height: auto;
-            padding: 10px;
-            font-size: 16px;
-        }
-
-        .form-signin .form-control:focus {
-            z-index: 2;
-        }
-
-        .form-signin input[type="email"] {
-            margin-bottom: -1px;
-            border-bottom-right-radius: 0;
-            border-bottom-left-radius: 0;
-        }
-
-        .form-signin input[type="password"] {
-            margin-bottom: 10px;
-            border-top-left-radius: 0;
-            border-top-right-radius: 0;
-        }
-    </style>
+    {% include "@NCMFUser/Security/styles.html.twig" %}
 {% endblock %}
