--- a/Resources/views/Registration/register.html.twig
+++ b/Resources/views/Registration/register.html.twig
@@ -19,7 +19,7 @@
                 <small><a href="{{ path('fos_user_security_login') }}">Зарегистрированы?</a></small>
             </div>
             <div class="col-md-6 text-right">
-                <small><a href="{{ path('fos_user_security_login') }}">Забыли пароль?</a></small>
+                <small><a href="{{ path('fos_user_resetting_request') }}">Забыли пароль?</a></small>
             </div>
         </div>
         <p class="mt-5 mb-3 text-muted">&copy; {{ 'now'|date('Y') }}</p>
