Changed config, secutrity and traslations

--- a/Resources/views/Registration/register.html.twig
+++ b/Resources/views/Registration/register.html.twig
@@ -1,5 +1,5 @@
 {% extends "@NCMFUser/layout.html.twig" %}
-{% trans_default_domain 'FOSUserBundle' %}
+{% trans_default_domain 'NCMFUserBundle' %}
 {% form_theme form 'bootstrap_4_layout.html.twig' %}
 
 {% block body %}
