--- a/Resources/views/Resetting/check_email.html.twig
+++ b/Resources/views/Resetting/check_email.html.twig
@@ -1,5 +1,5 @@
 {% extends "@NCMFUser/layout.html.twig" %}
-{% trans_default_domain 'FOSUserBundle' %}
+{% trans_default_domain 'NCMFUserBundle' %}
 {% block body %}
 
     <div class="text-center">
