--- a/Resources/views/Registration/check_email.html.twig
+++ b/Resources/views/Registration/check_email.html.twig
@@ -1,6 +1,6 @@
 {% extends "@FOSUser/layout.html.twig" %}
 
-{% trans_default_domain 'FOSUserBundle' %}
+{% trans_default_domain 'NCMFUserBundle' %}
 
 {% block fos_user_content %}
 
