--- a/Resources/views/Registration/confirmed.html.twig
+++ b/Resources/views/Registration/confirmed.html.twig
@@ -1,6 +1,6 @@
 {% extends "@NCMFUser/layout.html.twig" %}
 
-{% trans_default_domain 'FOSUserBundle' %}
+{% trans_default_domain 'NCMFUserBundle' %}
 
 {% block body %}
 
